@@ -5,15 +5,14 @@
     <groupId>com.csz</groupId>  
     <artifactId>dubbo-practise</artifactId>  
     <version>0.0.1</version>  
-    <packaging>war</packaging>
+    <packaging>pom</packaging>
     <name>dubbo-practise</name>  
     <modules> 
         <module>dubbo-provider</module>
         <module>dubbo-consumer</module> 
         <module>service-rpc-api</module>
         <module>service-rpc-impl</module>
-        <module>dubbo-consumer</module>
-        <!--<module>dubbo-official</module>-->
+        <module>dubbo-2.5.5-official</module>
         <module>dubbo-web-console</module>
     </modules>
 
@@ -36,6 +35,63 @@
         <alibaba.dubbo.version>2.8.4.2</alibaba.dubbo.version>
         <zkclient.version>0.10</zkclient.version>
         <spring.version>4.3.14.RELEASE</spring.version>
+
+        <!-- Common libs -->
+        <!-- from dubbo-admin -->
+        <spring_version>4.3.10.RELEASE</spring_version>
+        <javassist_version>3.20.0-GA</javassist_version>
+        <netty_version>3.2.5.Final</netty_version>
+        <mina_version>1.1.7</mina_version>
+        <grizzly_version>2.1.4</grizzly_version>
+        <httpclient_version>4.5.3</httpclient_version>
+        <hessian_lite_version>3.2.6</hessian_lite_version>
+        <xstream_version>1.4.1</xstream_version>
+        <fastjson_version>1.2.31</fastjson_version>
+        <bsf_version>3.1</bsf_version>
+        <sorcerer_version>0.8</sorcerer_version>
+        <zookeeper_version>3.4.9</zookeeper_version>
+        <zkclient_version>0.2</zkclient_version>
+        <curator_version>2.12.0</curator_version>
+        <jedis_version>2.9.0</jedis_version>
+        <xmemcached_version>1.3.6</xmemcached_version>
+        <cxf_version>3.0.14</cxf_version>
+        <thrift_version>0.8.0</thrift_version>
+        <jfreechart_version>1.0.13</jfreechart_version>
+        <hessian_version>4.0.38</hessian_version>
+        <servlet_version>2.5</servlet_version>
+        <jetty_version>6.1.26</jetty_version>
+        <validation_version>1.1.0.Final</validation_version>
+        <hibernate_validator_version>5.4.1.Final</hibernate_validator_version>
+        <jel_version>3.0.1-b08</jel_version>
+        <jcache_version>1.0.0</jcache_version>
+        <sca_version>2.0-M5.1</sca_version>
+        <guice_version>3.0</guice_version>
+        <cglib_version>2.2</cglib_version>
+        <webx_version>3.0.8</webx_version>
+        <!-- Log libs -->
+        <slf4j_version>1.7.25</slf4j_version>
+        <jcl_version>1.2</jcl_version>
+        <log4j_version>1.2.16</log4j_version>
+        <logback_version>1.2.2</logback_version>
+        <!-- Test libs -->
+        <junit_version>4.12</junit_version>
+        <easymock_version>3.4</easymock_version>
+        <jmockit_version>1.33</jmockit_version>
+        <!-- Build args -->
+        <argline>-server -Xms64m -Xmx256m -XX:PermSize=64m -XX:MaxPermSize=128m -Dfile.encoding=UTF-8
+            -Djava.net.preferIPv4Stack=true
+        </argline>
+        <skip_maven_deploy>false</skip_maven_deploy>
+        <updateReleaseInfo>true</updateReleaseInfo>
+        <project.build.sourceEncoding>${file_encoding}</project.build.sourceEncoding>
+
+        <profile.name>oss</profile.name>
+
+        <!-- for maven compiler plugin -->
+        <java_source_version>1.6</java_source_version>
+        <java_target_version>1.6</java_target_version>
+        <file_encoding>UTF-8</file_encoding>
+
 
     </properties>
 
@@ -110,9 +166,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>  
                 <version>2.5.1</version>  
                 <configuration>
-                    <source>1.7</source>  
+                    <source>1.7</source>
                     <encoding>UTF8</encoding>  
-                    <target>1.7</target> 
+                    <target>1.7</target>
                 </configuration> 
             </plugin> 
         </plugins>  
